Src/XData.Compiler/Grammars.txt
indicator-compilation-unit:
uri-aliasing* indicator*
;
indicator:
'namespace' uri ('=' | '&') csharp-namespace-name
;
csharp-namespace-name:
name-token ('.' name-token)*
;
compilation-unit:
uri-aliasing* namespace*
;

uri-aliasing:
'alias' uri-value 'as' uri-alias ';'
;
uri-value:
string-value-token
;
uri-alias:
name-token
;
uri:
uri-value | uri-alias
;

namespace:
'namespace' uri '{' namespace-import* namespace-member* '}'
;
namespace-import:
'import' uri ('as' namespace-alias)?
;
namespace-alias:
name-token
;
namespace-member:
type | global-element 
;

qualifiable-name:
(namespace-alias ':')? name
;

type:
'type' name type-annotations? type-body
;
type-annotations:
'<' abstract-or-sealed? '>'
;
type-body:
type-list | type-directness | type-extension | type-restriction
;
type-list:
list-item-type facets?
;
list-item-type:
'lists' qualifiable-name
;

type-directness:
attributes-children | ';'
;
type-extension:
'extends' qualifiable-name attributes-children?
;
type-restriction:
'restricts' qualifiable-name (attributes-children | facets)?
;

attributes-children:
attributes children? | children
;
children:
simple-child | complex-children
;
complex-children:
element-children | sequence-children
;
simple-child:
'$' qualifiable-name
;
facets:
'${' (lengths | ?? | list-item-type)* '}'
;

attributes:
'[' attribute* ']'
;
attribute:
name attribute-annotations? 'as' qualifiable-name
;
attribute-annotations:
'<' (optional-or-delete | nullable)* '>'
;


global-element:
'element' name global-element-annotations? 'as' qualifiable-name
;
global-element-annotations:
'<' (nullable | abstract-or-sealed | substitute)* '>'
;

element-children:
'{' member-element-child* '}'
;
sequence-children:
'#{' member-child* '}'
;
member-element-child:
local-element | global-element-ref
;
member-child:
member-element-child | member-sequence-children | member-choice-children
;
local-element:
name local-element-annotations? 'as' qualifiable-name
;
local-element-annotations:
'<' (nullable | member-name | occurrence)* '>'
;
global-element-ref:
'&' qualifiable-name member-child-annotations?
;
member-child-annotations:
'<' (member-name | occurrence)* '>'
;

member-sequence-children:
'#{' member-child* '}' member-child-annotations?
;
member-choice-children:
'?{' member-child* '}' member-child-annotations?
;



abstract-or-sealed:
'abstract' | 'sealed'
;
optional-or-delete:
'?' | 'x'
;
nullable:
'nullable'
;
substitute:
'substitutes' qualifiable-name
;
member-name:
'membername' name
;
occurrence:
'?' | '*' | '+' | integer-value '..' integer-value?
;
